[package]
name = "pushevent"
version = "0.2.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"
description = "PushEvent is a simple event dispatch library built on top of tungsteineite, that allows you to dispatch events to clients based on what resource they are subscribed to."
documentation = "https://docs.rs/pushevent"
repository = "https://github.com/vgarleanu/pushevent"
readme = "README.md"
keywords = ["ws-rs", "pushevent"]
categories = ["web-programming::websocket"]
license = "MIT"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt"] }
tokio-tungstenite = "0.14.0"
tungstenite = "0.13.0"
futures-channel = "0.3.13"
futures-util = "0.3.13"
