[package]
name = "simple"
version = "0.1.0"
authors = ["Valerian G. <valerian.galreanu@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pushevent]
path = "../../"
